# TF_Decagon_Test

./: .gitignore  pyproject.toml
analysis/assessment/: assessment.py  create_false_edges.py
analysis/experiments/config_templates/: nonnaive_best.yaml  nonnaive_chemberta.yaml  nonnaive_template.yaml  selfloops_best.yaml
data/graphs/non-naive/: generate_non_naive_chemberta.py  process_non-naive_graph.py
data/graphs/selfloops/: process_selfloop_graph.py
data/processed/: process_raw_data.py
data/processed/nonnaive_feature_vectors/: generate_non_naive_feature_vectors.py
data/processed/polypharmacy/: split_by_polypharmacy_side_effect.py
kge/model/embedder/: lookup_embedder.py
