[project]
name = "tf-decagon-static"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "ax-platform>=0.2.10,<0.4",
    "ipykernel>=7.3.0",
    "libkge",
    "matplotlib>=3.11.0",
    "numpy<2",
    "pandas>=2.0,<3",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.0",
    "torch>=2.13.0",
    "transformers>=5.13.1",
]

[tool.uv.sources]
libkge = { path = "../kge", editable = true }
